[feat] #39 : 로또 6/45 당첨 결과 이력 view 개선
1. 10번 ball 의 경우 디자인 문제로 계란형으로 표시되는 문제가 있어서 통일성을 주기위해 별도 css 디자인 처리했다.
2. 판매점의 1등 및 2등 배출 횟수를 집계해 표시하도록 했다.
3. 판매점 목록에 onclick 이벤트 처리를 통해 판매점 상세정보 view 로 이동하도록 처리했다.

--- a/src/main/resources/static/css/lotto.css
+++ b/src/main/resources/static/css/lotto.css
@@ -64,6 +64,14 @@
     font: 32px Arial, sans-serif;
 }
 
+.ball-10 {
+    padding: 15px 17px;
+    background: #fbc400;
+    color: #ffffff;
+    text-align: center;
+    font: 32px Arial, sans-serif;
+}
+
 .ball-1 {
     padding: 15px 17px;
     background: #69c8f2;
