--- a/src/main/resources/templates/lotto/index.html
+++ b/src/main/resources/templates/lotto/index.html
@@ -23,9 +23,9 @@
             <div class="row search-group">
                 <h2>회차</h2>
                 <select id="draw-no" name="drawNo" class="form-control">
-                    <option>3</option>
-                    <option>2</option>
-                    <option>1</option>
+                    <option>1056</option>
+                    <option>1055</option>
+                    <option>1054</option>
                 </select>
                 <button class="btn btn-primary" type="submit">
                     <i class="fa fa-search"></i>
@@ -124,18 +124,30 @@
             <table class="table table-hover" id="lotto-1st-win-shop-table">
                 <thead class="thead-center">
                 <tr>
-                    <th class="col-1">순번</th>
-                    <th class="col-3">상호명</th>
-                    <th class="col-1">구분</th>
+                    <th class="col">순번</th>
+                    <th class="col">상호명</th>
+                    <th class="col">구분</th>
                     <th class="col">소재지</th>
+                    <th class="col">1등</th>
+                    <th class="col">2등</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="no col-1 col-center">1</td>
-                    <td class="name col-3 col-center">인터넷 복권판매사이트</td>
-                    <td class="purchase col-1 col-center">자동</td>
+                    <td class="no col col-center">1</td>
+                    <td class="name col col-center">인터넷 복권판매사이트</td>
+                    <td class="purchase col col-center">자동</td>
                     <td class="address col col-center">동행복권(dhlottery.co.kr)</td>
+                    <td class="count-1st-win col col-center">0</td>
+                    <td class="count-2nd-win col col-center">0</td>
+                </tr>
+                <tr>
+                    <td class="no col col-center">2</td>
+                    <td class="name col col-center">인터넷 복권판매사이트</td>
+                    <td class="purchase col col-center">자동</td>
+                    <td class="address col col-center">동행복권(dhlottery.co.kr)</td>
+                    <td class="count-1st-win col col-center">0</td>
+                    <td class="count-2nd-win col col-center">0</td>
                 </tr>
                 </tbody>
             </table>
@@ -149,16 +161,27 @@
                 <table class="table table-hover" id="lotto-2nd-win-shop-table">
                     <thead class="thead-center">
                     <tr>
-                        <th class="col-1">순번</th>
-                        <th class="col-3">상호명</th>
+                        <th class="col">순번</th>
+                        <th class="col">상호명</th>
                         <th class="col">소재지</th>
+                        <th class="col">1등</th>
+                        <th class="col">2등</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td class="no col-1 col-center">1</td>
-                        <td class="name col-3 col-center">인터넷 복권판매사이트</td>
+                        <td class="no col col-center">1</td>
+                        <td class="name col col-center">인터넷 복권판매사이트</td>
                         <td class="address col col-center">동행복권(dhlottery.co.kr)</td>
+                        <td class="count-1st-win col col-center">0</td>
+                        <td class="count-2nd-win col col-center">0</td>
+                    </tr>
+                    <tr>
+                        <td class="no col col-center">2</td>
+                        <td class="name col col-center">인터넷 복권판매사이트</td>
+                        <td class="address col col-center">동행복권(dhlottery.co.kr)</td>
+                        <td class="count-1st-win col col-center">0</td>
+                        <td class="count-2nd-win col col-center">0</td>
                     </tr>
                     </tbody>
                 </table>
