[feat] #43 : 전체적인 view 수정
1. shop detail - 2등 배출 목록에서 2등 당첨금을 표시할 수 있도록 수정했다.
2. index 페이지를 추가했다. 
3. table header 중앙 정렬, 색상 등 간단한 view 수정사항을 작업했다.

--- a/src/main/resources/static/css/lottoDetail.css
+++ b/src/main/resources/static/css/lottoDetail.css
@@ -30,8 +30,22 @@
     bottom: 5px;
 }
 
+.title {
+    position :relative;
+}
+
+.title h6 {
+    position: absolute;
+    right: 10px;
+    bottom: 5px;
+}
+
 .text-red {
     color: #dc1f1f;
+}
+
+.text-white {
+    color: white;
 }
 
 .table thead {
