--- a/src/main/resources/static/css/shopDetail.css
+++ b/src/main/resources/static/css/shopDetail.css
@@ -1,6 +1,7 @@
 #map {
+    margin-top: 10px;
     width:400px;
-    height:400px;
+    height:300px;
 }
 
 .table thead {
@@ -18,6 +19,10 @@
 
 .col-right {
     text-align: right;
+}
+
+.text-white {
+    color: white;
 }
 
 .ball-0 {
