--- a/src/main/resources/templates/lotto/detail.html
+++ b/src/main/resources/templates/lotto/detail.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/lotto.css" rel="stylesheet">
+    <link href="/css/lottoDetail.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -37,7 +37,6 @@
             <h2><span class="text-red" id="draw-info-no">1056회</span> 당첨결과</h2>
             <span class="draw-dt"><b class="text-red" id="draw-info-dt">2023-02-25</b> 추첨</span>
         </div>
-
 
         <!-- BEGIN TABLE RESULT -->
         <div class="table-responsive">
@@ -118,7 +117,10 @@
         </div>
         <!-- END TABLE RESULT -->
 
-        <h3>1등 배출점</h3>
+        <div class="title">
+            <h3><span class="text-red">1등</span> 배출점</h3>
+            <h6><span class="text-red">★262회차</span>부터 제공</h6>
+        </div>
         <!-- BEGIN TABLE RESULT -->
         <div class="table-responsive">
             <table class="table table-hover" id="lotto-1st-win-shop-table">
