--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/shop.css" rel="stylesheet">
+    <link href="/css/shopDetail.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -23,7 +23,7 @@
         <tr>
             <td class="col" colspan="2"><h1 id="shop-name">인터넷 복권판매사이트</h1></td>
             <td class="col-1"></td>
-            <td class="col-2" rowspan="5">
+            <td class="col-2" rowspan="4">
                 <div id="map"></div>
             </td>
         </tr>
@@ -36,41 +36,20 @@
             <td class="col"><span id="shop-tel">1588-6450</span></td>
         </tr>
         <tr>
-            <td class="col-1"><b>취급복권</b></td>
-            <td class="col">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th class="col col-center">로또6/45</th>
-                        <th class="col col-center">연금복권720+</th>
-                        <th class="col col-center">스피또</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td class="col col-center" id="l645-yn">O</td>
-                        <td class="col col-center" id="l720-yn"></td>
-                        <td class="col col-center" id="sp-yn"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-        <tr>
             <td class="col-1"><b>당첨집계</b></td>
             <td class="col">
                 <table class="table">
                     <thead>
                     <tr>
-                        <th class="col col-highlight col-center" colspan="4">1등</th>
+                        <th class="col col-center" colspan="4">1등</th>
                         <th class="col col-center">2등</th>
                     </tr>
                     <tr>
-                        <th class="col col-highlight col-center">전체</th>
-                        <th class="col col-highlight col-center">자동</th>
-                        <th class="col col-highlight col-center">수동</th>
-                        <th class="col col-highlight col-center">반자동</th>
-                        <th class="col col-highlight col-center">전체</th>
+                        <th class="col col-center">전체</th>
+                        <th class="col col-center">자동</th>
+                        <th class="col col-center">수동</th>
+                        <th class="col col-center">반자동</th>
+                        <th class="col col-center">전체</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -94,11 +73,11 @@
         <table class="table table-hover" id="lotto-1st-win-table">
             <thead class="thead-center">
             <tr>
-                <th class="col">회차</th>
-                <th class="col">추첨일</th>
-                <th class="col">당첨번호</th>
-                <th class="col">구분</th>
-                <th class="col">당첨금</th>
+                <th class="col col-center">회차</th>
+                <th class="col col-center">추첨일</th>
+                <th class="col col-center">당첨번호</th>
+                <th class="col col-center">구분</th>
+                <th class="col col-center">당첨금</th>
             </tr>
             </thead>
             <tbody>
@@ -149,10 +128,10 @@
             <table class="table table-hover" id="lotto-2nd-win-table">
                 <thead class="thead-center">
                 <tr>
-                    <th class="col">회차</th>
-                    <th class="col">추첨일</th>
-                    <th class="col">당첨번호</th>
-                    <th class="col">당첨금</th>
+                    <th class="col col-center">회차</th>
+                    <th class="col col-center">추첨일</th>
+                    <th class="col col-center">당첨번호</th>
+                    <th class="col col-center">당첨금</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -196,7 +175,7 @@
     </details>
 </main>
 <script id="js-kakao-map" type="text/javascript"></script>
-<script type="text/javascript" src="/js/shop.js"></script>
+<script type="text/javascript" src="/js/shopDetail.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
