[refactor] #55 : 복권 판매점 랭킹 - css 수정
TOP 100 판매점을 한 화면에 표시하다 보니, 한 눈에 들어오지 않아서 css 를 수정해 스크롤 처리했다.

--- a/src/main/resources/static/css/shopRanking.css
+++ b/src/main/resources/static/css/shopRanking.css
@@ -36,3 +36,11 @@
 .table-hover tr:hover {
     cursor: pointer;
 }
+
+.table-responsive {
+    max-height: 700px;
+}
+
+#ranking-table {
+    overflow-y: scroll;
+}
