[feat] #76 : responsive footer view
`media query` 를 적용해 모바일 기기에 대응했다.
추가적으로 다른 view 에서 공통으로 사용할 `top`, `down` 스크롤 버튼을 추가했다.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" charset="PARK GI-PYO">
-  <title>project-lottery</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" charset="PARK GI-PYO">
+    <title>project-lottery</title>
+    <link href="/css/footer.css" rel="stylesheet">
 </head>
 <body>
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-  <p class="col-md-4 mb-0 text-muted">&copy; 2023 PARK GI-PYO</p>
-
-  <a href="/"
-     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32">
-      <use xlink:href="#bootstrap"/>
-    </svg>
-  </a>
-
-  <ul class="nav col-md-4 justify-content-end">
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Top</a></li>
-  </ul>
+<footer>
+    <!-- BEGIN 컨텐츠 영역 -->
+    <div id="footer-content">
+        <span>&copy; 2023 PARK GI-PYO</span>
+    </div>
+    <!-- END 컨텐츠 -->
+    <!-- BEGIN 스크롤 버튼 영역 -->
+    <div class="scroll-button">
+        <button>
+            <a href="#">
+                <i class="fas fa-arrow-alt-circle-up"></i>
+                <span>TOP</span>
+            </a>
+        </button>
+        <button>
+            <a href="#footer-content">
+                <span>DOWN</span>
+                <i class="fas fa-arrow-alt-circle-down"></i>
+            </a>
+        </button>
+    </div>
+    <!-- END 스크롤 버튼 영역 -->
 </footer>
+<script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 </body>
 </html>
