--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,7 +17,7 @@
         </a>
         <ul>
             <li><a href="/">홈</a></li>
-            <li><a href="/shop/list">지역별복권판매점</a></li>
+            <li><a href="/shop/list">복권판매점</a></li>
             <li><a href="/L645">로또추첨결과</a></li>
             <li><a href="/shop/ranking">로또명당</a></li>
         </ul>
@@ -29,7 +29,7 @@
             <li>
                 <a href="/L645">
                     <div>
-                        <i class="fa fa-home"></i>
+                        <i class="fas fa-home"></i>
                         <span>홈</span>
                     </div>
                 </a>
@@ -37,7 +37,7 @@
             <li>
                 <a href="/shop/list">
                     <div>
-                        <i class="fa fa-location-arrow"></i>
+                        <i class="fas fa-store"></i>
                         <span>복권판매점</span>
                     </div>
                 </a>
@@ -45,7 +45,7 @@
             <li>
                 <a href="/L645">
                     <div>
-                        <i class="fa fa-crown"></i>
+                        <i class="fas fa-trophy"></i>
                         <span>로또추첨결과</span>
                     </div>
                 </a>
@@ -53,7 +53,7 @@
             <li>
                 <a href="/shop/ranking">
                     <div>
-                        <i class="fa fa-ranking-star"></i>
+                        <i class="fas fa-ranking-star"></i>
                         <span>로또명당</span>
                     </div>
                 </a>
