--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -3,7 +3,7 @@
     padding: 5px;
 }
 
-.desktop-menu img {
+.desktop-menu a img {
     width: 150px;
     padding: 0;
 }
@@ -22,7 +22,7 @@
 
 .desktop-menu ul li a {
     color: #ffffff80;
-    font-size: 20px;
+    font-size: 16px;
     text-decoration: none;
 }
 
@@ -33,30 +33,48 @@
 .mobile-menu {
     z-index: 1;
     display: none;
+    padding: 5px 0;
+}
+
+.mobile-menu ul {
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    list-style: none;
 }
 
 .mobile-menu ul li a {
-    display: grid;
     color: white;
     text-decoration: none;
 }
 
 .mobile-menu ul li a div {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-gap: 3px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
 }
 
 .mobile-menu ul li a div i {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .mobile-menu ul li a div span {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 @media (max-width: 768px) {
     .desktop-menu {
         text-align: center;
+    }
+
+    .desktop-menu a img {
+        width: 130px;
     }
 
     .desktop-menu ul {
@@ -70,61 +88,51 @@
         width: 100%;
         background: #434348;
         border-top: 1px solid #ccc;
-        padding: 10px;
-        box-sizing: border-box;
-        text-align: center;
-    }
-
-    .mobile-menu ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-
-    .mobile-menu ul li {
-        display: inline-block;
-        margin: 0 5px;
-    }
-
-    .mobile-menu ul li a {
-        display: block;
     }
 
     .mobile-menu ul li a div i {
-        font-size: 23px;
+        font-size: 20px;
     }
 
     .mobile-menu ul li a div span {
-        font-size: 18px;
+        font-size: 15px;
     }
 }
 
 @media (max-width: 425px) {
+    .desktop-menu a img {
+        width: 110px;
+    }
+
     .mobile-menu ul li a div i {
-        font-size: 21px;
+        font-size: 18px;
     }
 
     .mobile-menu ul li a div span {
-        font-size: 16px;
+        font-size: 13px;
     }
 }
 
 @media (max-width: 375px) {
-    .mobile-menu ul li a div i {
-        font-size: 19px;
+    .desktop-menu a img {
+        width: 100px;
     }
 
-    .mobile-menu ul li a div span {
-        font-size: 14px;
-    }
-}
-
-@media (max-width: 320px) {
     .mobile-menu ul li a div i {
         font-size: 17px;
     }
 
     .mobile-menu ul li a div span {
         font-size: 12px;
+    }
+}
+
+@media (max-width: 320px) {
+    .mobile-menu ul li a div i {
+        font-size: 16px;
+    }
+
+    .mobile-menu ul li a div span {
+        font-size: 11px;
     }
 }
