--- a/src/main/resources/templates/lotto/drawResult.html
+++ b/src/main/resources/templates/lotto/drawResult.html
@@ -9,15 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
-    <link href="/css/lotto/detail.css" rel="stylesheet">
+    <link href="/css/lotto/drawResult.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
     header 삽입부
     <hr>
 </header>
-
 <main class="container">
+    <!-- BEGIN 회차 이동 버튼 -->
     <div class="move-button">
         <button class="prev-button">
             <i class="fas fa-arrow-alt-circle-left"></i>&nbsp;PREV
@@ -26,37 +26,38 @@
             NEXT&nbsp;<i class="fas fa-arrow-alt-circle-right"></i>
         </button>
     </div>
+    <!-- END 회차 이동 버튼 -->
 
     <div class="content-group">
+        <!-- BEGIN 회차 검색 영역 -->
         <div class="search-group">
             <form action="/L645" method="get">
-                <span class="label-sub-title">회차</span>
+                <span class="label-mini-title">회차</span>
                 <select id="draw-no" name="drawNo" class="form-control">
-                    <option>1060</option>
-                    <option>1059</option>
-                    <option>1058</option>
+                    <option>0회</option>
                 </select>
                 <button class="btn btn-primary" type="submit">
                     <i class="fa fa-search"></i>
                 </button>
             </form>
         </div>
+        <!-- END 회차 검색 영역 -->
 
         <!-- BEGIN 당첨 번호 -->
         <span class="label-title">추첨 결과</span>
         <div class="win-result">
-            <span class="draw-no">1060회</span>
+            <span class="draw-no">0회</span>
             <div class="draw-numbers">
-                <span class="ball">13</span>
-                <span class="ball">20</span>
-                <span class="ball">24</span>
-                <span class="ball">32</span>
-                <span class="ball">36</span>
-                <span class="ball">45</span>
+                <span class="ball">1</span>
+                <span class="ball">2</span>
+                <span class="ball">3</span>
+                <span class="ball">4</span>
+                <span class="ball">5</span>
+                <span class="ball">6</span>
                 <span class="split-token">+</span>
-                <span class="ball">29</span>
+                <span class="ball">7</span>
             </div>
-            <span class="label-sub-title">추첨일</span> <span class="label-text draw-dt"></span>
+            <span class="label-mini-title">추첨일</span> <span class="label-text draw-dt">(1900-01-01)</span>
         </div>
         <!-- END 당첨 번호 -->
 
@@ -64,8 +65,8 @@
         <div class="grid" id="lotto-win-prizes">
             <div>&nbsp;</div>
             <div><img class="ico"><span class="label-text">1등</span></div>
-            <div><span class="label-text"></span></div>
-            <div><span class="label-text"></span></div>
+            <div><span class="label-text">0게임</span></div>
+            <div><span class="label-text">0원</span></div>
             <div>&nbsp;</div>
             <div><span class="label-text"></span></div>
             <div><span class="label-text"></span></div>
